--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
     <br>
     <div id="div2">
-      <p class="div-text">  #2 </p>
+      <p class="div-text">  #1 </p>
     </div>
     <br>
     <div id="div3">
@@ -21,5 +21,28 @@
     <div id="div4">
       <p class="div-text">  #1 </p>
     </div>
+    <div id="div5">
+      <p class="div-text">  #1 </p>
+    </div>
+    <br>
+    <div id="div6">
+      <p class="div-text">  #1 </p>
+    </div>
+    <br>
+    <div id="div7">
+      <p class="div-text">  #1 </p>
+    </div>
+    <div id="div8">
+      <p class="div-text">  #1 </p>
+    </div>
+    <br>
+    <div id="div9">
+      <p class="div-text">  #1 </p>
+    </div>
+    <br>
+    <div id="div10">
+      <p class="div-text">  #1 </p>
+    </div>
+
   </body>
 </html>
